# Libr15Loader

./: CMakeLists.txt  README.md
.github/workflows/: ndk-build.yml  publish.yml
include/: _config.h  fileutils.hpp  log.hpp  modloader.hpp
src/: fileutils.cpp  main.cpp  modloader.cpp
